srcfiles = [
    lnInclude_hack,
    'fvMotionSolvers/fvMotionSolver/fvMotionSolver.C',
    'fvMotionSolvers/displacement/SBRStress/displacementSBRStressFvMotionSolver.C',
    'fvMotionSolvers/displacement/laplacian/displacementLaplacianFvMotionSolver.C',
    'fvMotionSolvers/displacement/surfaceAlignedSBRStress/surfaceAlignedSBRStressFvMotionSolver.C',
    'fvMotionSolvers/displacement/solidBodyDisplacementLaplacian/solidBodyDisplacementLaplacianFvMotionSolver.C',
    'fvMotionSolvers/componentDisplacement/componentLaplacian/displacementComponentLaplacianFvMotionSolver.C',
    'fvMotionSolvers/velocity/laplacian/velocityLaplacianFvMotionSolver.C',
    'fvMotionSolvers/componentVelocity/componentLaplacian/velocityComponentLaplacianFvMotionSolver.C',
    'motionDiffusivity/motionDiffusivity/motionDiffusivity.C',
    'motionDiffusivity/uniform/uniformDiffusivity.C',
    'motionDiffusivity/inverseDistance/inverseDistanceDiffusivity.C',
    'motionDiffusivity/inverseFaceDistance/inverseFaceDistanceDiffusivity.C',
    'motionDiffusivity/inversePointDistance/inversePointDistanceDiffusivity.C',
    'motionDiffusivity/inverseVolume/inverseVolumeDiffusivity.C',
    'motionDiffusivity/directional/directionalDiffusivity.C',
    'motionDiffusivity/motionDirectional/motionDirectionalDiffusivity.C',
    'motionDiffusivity/file/fileDiffusivity.C',
    'motionDiffusivity/manipulators/quadratic/quadraticDiffusivity.C',
    'motionDiffusivity/manipulators/exponential/exponentialDiffusivity.C',
    'motionInterpolation/motionInterpolation/motionInterpolation.C',
    'motionInterpolation/patchCorrected/patchCorrectedInterpolation.C',
    'motionInterpolation/patchTransformed/patchTransformedInterpolation.C',
    'fvPatchFields/derived/cellMotion/cellMotionFvPatchFields.C',
    'fvPatchFields/derived/surfaceSlipDisplacement/surfaceSlipDisplacementFvPatchFields.C',
    'pointPatchFields/derived/oscillatingVelocity/oscillatingVelocityPointPatchVectorField.C',
    'pointPatchFields/derived/angularOscillatingVelocity/angularOscillatingVelocityPointPatchVectorField.C',
    'pointPatchFields/derived/oscillatingDisplacement/oscillatingDisplacementPointPatchVectorField.C',
    'pointPatchFields/derived/angularOscillatingDisplacement/angularOscillatingDisplacementPointPatchVectorField.C',
    'pointPatchFields/derived/surfaceSlipDisplacement/surfaceSlipDisplacementPointPatchVectorField.C',
    'pointPatchFields/derived/surfaceDisplacement/surfaceDisplacementPointPatchVectorField.C',
    'pointPatchFields/derived/waveDisplacement/waveDisplacementPointPatchVectorField.C',
    'pointPatchFields/derived/timeVaryingMappedFixedValue/timeVaryingMappedFixedValuePointPatchFields.C',
    'pointPatchFields/derived/uniformInterpolatedDisplacement/uniformInterpolatedDisplacementPointPatchVectorField.C',
]
link_with = [
    lib_finiteVolume,
    lib_fvOptions,
    lib_fileFormats,
    lib_surfMesh,
    lib_meshTools,
    lib_dynamicMesh,
]
dependencies = []
cpp_args = [
    '-I' + meson.source_root() / 'src/fvMotionSolver',
    '-I' + recursive_include_dirs / 'src/finiteVolume',
    '-I' + recursive_include_dirs / 'src/fileFormats',
    '-I' + recursive_include_dirs / 'src/surfMesh',
    '-I' + recursive_include_dirs / 'src/meshTools',
    '-I' + recursive_include_dirs / 'src/dynamicMesh',
    '-I' + recursive_include_dirs / 'src/functionObjects/forces',
    '-I' + recursive_include_dirs / 'src/fvMotionSolver',
    '-I' + recursive_include_dirs / 'src/OpenFOAM',
    '-I' + recursive_include_dirs / 'src/OSspecific/POSIX',
]
lib_fvMotionSolvers = library(
    'fvMotionSolvers',
    srcfiles,
    link_with: link_with,
    dependencies: dependencies,
    cpp_args: cpp_args,
    implicit_include_directories: false,
    install: true,
)
pkg.generate(lib_fvMotionSolvers)
