srcfiles = [
    lnInclude_hack,
    'cellSetOption/cellSetOption.C',
    'interRegionOption/interRegionOption.C',
    'sources/general/codedSource/codedFvSources.C',
    'sources/general/semiImplicitSource/semiImplicitSources.C',
    'sources/derived/acousticDampingSource/acousticDampingSource.C',
    'sources/derived/actuationDiskSource/actuationDiskSource.C',
    'sources/derived/buoyancyEnergy/buoyancyEnergy.C',
    'sources/derived/buoyancyForce/buoyancyForce.C',
    'sources/derived/directionalPressureGradientExplicitSource/directionalPressureGradientExplicitSource.C',
    'sources/derived/explicitPorositySource/explicitPorositySource.C',
    'sources/derived/jouleHeatingSource/jouleHeatingSource.C',
    'sources/derived/meanVelocityForce/meanVelocityForce.C',
    'sources/derived/meanVelocityForce/patchMeanVelocityForce/patchMeanVelocityForce.C',
    'sources/derived/multiphaseStabilizedTurbulence/multiphaseStabilizedTurbulence.C',
    'sources/derived/phaseLimitStabilization/phaseLimitStabilization.C',
    'sources/derived/radialActuationDiskSource/radialActuationDiskSource.C',
    'sources/derived/rotorDiskSource/rotorDiskSource.C',
    'sources/derived/rotorDiskSource/bladeModel/bladeModel.C',
    'sources/derived/rotorDiskSource/profileModel/profileModel.C',
    'sources/derived/rotorDiskSource/profileModel/profileModelList.C',
    'sources/derived/rotorDiskSource/profileModel/lookup/lookupProfile.C',
    'sources/derived/rotorDiskSource/profileModel/series/seriesProfile.C',
    'sources/derived/rotorDiskSource/trimModel/trimModel/trimModel.C',
    'sources/derived/rotorDiskSource/trimModel/trimModel/trimModelNew.C',
    'sources/derived/rotorDiskSource/trimModel/fixed/fixedTrim.C',
    'sources/derived/rotorDiskSource/trimModel/targetCoeff/targetCoeffTrim.C',
    'sources/derived/solidificationMeltingSource/solidificationMeltingSource.C',
    'sources/derived/tabulatedAccelerationSource/tabulatedAccelerationSource.C',
    'sources/derived/tabulatedAccelerationSource/tabulated6DoFAcceleration/tabulated6DoFAcceleration.C',
    'sources/derived/viscousDissipation/viscousDissipation.C',
    'sources/derived/buoyancyTurbSource/buoyancyTurbSource.C',
    'sources/derived/patchCellsSource/patchCellsSource.C',
    'sources/derived/heatExchangerSource/heatExchangerSource.C',
    'sources/derived/heatExchangerSource/heatExchangerModels/heatExchangerModel/heatExchangerModel.C',
    'sources/derived/heatExchangerSource/heatExchangerModels/heatExchangerModel/heatExchangerModelNew.C',
    'sources/derived/heatExchangerSource/heatExchangerModels/effectivenessTable/effectivenessTable.C',
    'sources/derived/heatExchangerSource/heatExchangerModels/referenceTemperature/referenceTemperature.C',
    'sources/interRegion/interRegionHeatTransfer/interRegionHeatTransferModel/interRegionHeatTransferModel.C',
    'sources/interRegion/interRegionHeatTransfer/constantHeatTransfer/constantHeatTransfer.C',
    'sources/interRegion/interRegionHeatTransfer/tabulatedHeatTransfer/tabulatedHeatTransfer.C',
    'sources/interRegion/interRegionHeatTransfer/tabulatedNTUHeatTransfer/tabulatedNTUHeatTransfer.C',
    'sources/interRegion/interRegionHeatTransfer/variableHeatTransfer/variableHeatTransfer.C',
    'sources/interRegion/interRegionExplicitPorositySource/interRegionExplicitPorositySource.C',
    'constraints/general/fixedValueConstraint/fixedValueConstraints.C',
    'constraints/derived/fixedTemperatureConstraint/fixedTemperatureConstraint.C',
    'constraints/derived/velocityDampingConstraint/velocityDampingConstraint.C',
    'corrections/limitTemperature/limitTemperature.C',
    'corrections/limitVelocity/limitVelocity.C',
]
link_with = [
    lib_finiteVolume,
    lib_fileFormats,
    lib_surfMesh,
    lib_meshTools,
    lib_sampling,
    lib_fluidThermophysicalModels,
    lib_solidThermo,
    lib_turbulenceModels,
    lib_incompressibleTurbulenceModels,
    lib_compressibleTurbulenceModels,
    lib_reactionThermophysicalModels,
    lib_overset,
]
dependencies = []
cpp_args = [
    '-I' + meson.source_root() / 'src/fvOptions',
    '-I' + recursive_include_dirs / 'src/finiteVolume',
    '-I' + recursive_include_dirs / 'src/fileFormats',
    '-I' + recursive_include_dirs / 'src/surfMesh',
    '-I' + recursive_include_dirs / 'src/meshTools',
    '-I' + recursive_include_dirs / 'src/sampling',
    '-I' + meson.source_root() / 'src/transportModels',
    '-I' + recursive_include_dirs / 'src/transportModels/compressible',
    '-I' + recursive_include_dirs / 'src/transportModels/incompressible',
    '-I' + recursive_include_dirs / 'src/thermophysicalModels/basic',
    '-I' + recursive_include_dirs / 'src/thermophysicalModels/specie',
    '-I' + recursive_include_dirs / 'src/thermophysicalModels/solidThermo',
    '-I' + recursive_include_dirs / 'src/thermophysicalModels/reactionThermo',
    '-I' + recursive_include_dirs / 'src/TurbulenceModels/turbulenceModels',
    '-I' + recursive_include_dirs / 'src/TurbulenceModels/compressible',
    '-I' + recursive_include_dirs / 'src/TurbulenceModels/incompressible',
    '-I' + recursive_include_dirs / 'src/overset',
    '-I' + recursive_include_dirs / 'src/fvOptions',
    '-I' + recursive_include_dirs / 'src/OpenFOAM',
    '-I' + recursive_include_dirs / 'src/OSspecific/POSIX',
]
lib_fvOptions = library(
    'fvOptions',
    srcfiles,
    link_with: link_with,
    dependencies: dependencies,
    cpp_args: cpp_args,
    implicit_include_directories: false,
    install: true,
)
pkg.generate(lib_fvOptions)
